--- a/package.json
+++ b/package.json
@@ -9,7 +9,8 @@
     "package": "electron-forge package",
     "make": "electron-forge make",
     "publish": "electron-forge publish",
-    "lint": "eslint --ext .ts ."
+    "lint": "eslint --ext .ts .",
+    "compile": "apollo codegen:generate --localSchemaFile=./__generated__/schema.graphql --target=typescript __generated__"
   },
   "keywords": [],
   "author": {
@@ -63,6 +64,7 @@
     }
   },
   "devDependencies": {
+    "@apollo/react-hooks": "^3.1.3",
     "@electron-forge/cli": "^6.0.0-beta.49",
     "@electron-forge/maker-deb": "^6.0.0-beta.49",
     "@electron-forge/maker-rpm": "^6.0.0-beta.49",
@@ -70,19 +72,38 @@
     "@electron-forge/maker-zip": "^6.0.0-beta.49",
     "@electron-forge/plugin-webpack": "^6.0.0-beta.49",
     "@marshallofsound/webpack-asset-relocator-loader": "^0.5.0",
+    "@material-ui/core": "^4.9.1",
+    "@material-ui/icons": "^4.9.1",
+    "@types/gulp": "^4.0.6",
+    "@types/react": "^16.9.19",
+    "@types/react-dom": "^16.9.5",
     "@typescript-eslint/eslint-plugin": "^2.19.0",
     "@typescript-eslint/parser": "^2.19.0",
+    "apollo": "^2.22.0",
+    "apollo-boost": "^0.4.7",
     "css-loader": "^3.4.2",
     "electron": "8.0.0",
     "eslint": "^6.8.0",
     "eslint-plugin-import": "^2.20.1",
+    "file-loader": "^5.0.2",
     "fork-ts-checker-webpack-plugin": "^3.1.1",
+    "graphql": "^14.6.0",
+    "graphql-yoga": "^1.18.3",
+    "gulp": "^4.0.2",
     "node-loader": "^0.6.0",
+    "react": "^16.12.0",
+    "react-dom": "^16.12.0",
+    "reflect-metadata": "^0.1.13",
     "style-loader": "^0.23.1",
     "ts-loader": "^6.2.1",
+    "ts-node": "^8.6.2",
+    "type-graphql": "^0.17.6",
+    "typeface-roboto": "0.0.75",
+    "typeorm": "^0.2.22",
     "typescript": "^3.7.5"
   },
   "dependencies": {
-    "electron-squirrel-startup": "^1.0.0"
+    "electron-squirrel-startup": "^1.0.0",
+    "sqlite3": "^4.1.1"
   }
 }
