--- a/package.json
+++ b/package.json
@@ -10,7 +10,8 @@
     "make": "electron-forge make",
     "publish": "electron-forge publish",
     "lint": "eslint --ext .ts .",
-    "compile": "apollo codegen:generate --localSchemaFile=./__generated__/schema.graphql --target=typescript __generated__"
+    "compile": "apollo codegen:generate --localSchemaFile=./__generated__/schema.graphql --target=typescript __generated__",
+    "test": "jest"
   },
   "keywords": [],
   "author": {
@@ -75,11 +76,14 @@
     "@material-ui/core": "^4.9.1",
     "@material-ui/icons": "^4.9.1",
     "@types/gulp": "^4.0.6",
+    "@types/jest": "^25.1.2",
     "@types/react": "^16.9.19",
     "@types/react-dom": "^16.9.5",
+    "@types/rimraf": "^2.0.3",
     "@types/webpack-env": "^1.15.1",
     "@typescript-eslint/eslint-plugin": "^2.19.0",
     "@typescript-eslint/parser": "^2.19.0",
+    "@usefultools/monads": "^3.0.3",
     "apollo": "^2.22.0",
     "apollo-boost": "^0.4.7",
     "css-loader": "^3.4.2",
@@ -91,13 +95,17 @@
     "graphql": "^14.6.0",
     "graphql-yoga": "^1.18.3",
     "gulp": "^4.0.2",
+    "jest": "^25.1.0",
     "node-loader": "^0.6.0",
     "react": "^16.12.0",
     "react-dom": "^16.12.0",
     "reflect-metadata": "^0.1.13",
+    "rimraf": "^3.0.2",
     "style-loader": "^0.23.1",
+    "ts-jest": "^25.2.0",
     "ts-loader": "^6.2.1",
     "ts-node": "^8.6.2",
+    "tslib": "^1.10.0",
     "type-graphql": "^0.17.6",
     "typeface-roboto": "0.0.75",
     "typeorm": "^0.2.22",
