--- a/tsconfig.json
+++ b/tsconfig.json
@@ -21,5 +21,5 @@
     "lib": ["ES6", "DOM", "ES2020", "ESNext.AsyncIterable"],
     "target": "ES2020"
   },
-  "include": ["src/**/*"]
+  "include": ["src/**/*", "__mocks__/**/*"]
 }
