--- a/package.json
+++ b/package.json
@@ -75,6 +75,8 @@
     "@marshallofsound/webpack-asset-relocator-loader": "^0.5.0",
     "@material-ui/core": "^4.9.1",
     "@material-ui/icons": "^4.9.1",
+    "@types/enzyme": "^3.10.5",
+    "@types/enzyme-adapter-react-16": "^1.0.6",
     "@types/gulp": "^4.0.6",
     "@types/jest": "^25.1.2",
     "@types/react": "^16.9.19",
@@ -88,6 +90,8 @@
     "apollo-boost": "^0.4.7",
     "css-loader": "^3.4.2",
     "electron": "8.0.0",
+    "enzyme": "^3.11.0",
+    "enzyme-adapter-react-16": "^1.15.2",
     "eslint": "^6.8.0",
     "eslint-plugin-import": "^2.20.1",
     "file-loader": "^5.0.2",
